# Epaper-SHT45

./: .clangd  .cproject  .gitignore  .project  sdkconfig
components/GxEPD2/: CMakeLists.txt  GxEPD2_290_BS.h
components/adafruit_busio/: Adafruit_BusIO_Register.h  Adafruit_I2CRegister.h  CMakeLists.txt
components/adafruit_gfx/: CMakeLists.txt
components/common/include/: common.h
components/display/: CMakeLists.txt  cat.c  display.c
components/display/include/: display.h
components/display_wrapper/: CMakeLists.txt  display_wrapper.cpp
components/display_wrapper/bitmaps/: splash.cpp  splash.h
components/display_wrapper/include/: display_wrapper.h
components/sensor/: CMakeLists.txt  sensor.c
components/sensor/include/: sensor.h
components/system/: CMakeLists.txt  system.c
components/system/include/: system.h
main/: CMakeLists.txt  idf_component.yml  main.c
